--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication" >
         <activity
-            android:name=".Game"
-            android:exported="false" />
+            android:name=".SignInActivity"
+            android:exported="true" />
         <activity
             android:name=".ActivityForget"
             android:exported="false" />
@@ -23,7 +23,7 @@
             android:name=".LoginActivity"
             android:exported="true" />
         <activity
-            android:name=".SignInActivity"
+            android:name=".SplashScreen"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
